--- a/style.css
+++ b/style.css
@@ -322,6 +322,16 @@ a:hover {
     z-index: 2;
 }
 
+.col-sm-12 .text-center {
+    color: white;
+    font-weight: 600;
+}
+
+.col-sm-12 .text-center a .fa{
+    color:#FFF;
+
+}
+
 @media (min-width: 768px) {
     .site-navigation {
         position: absolute;
@@ -1009,6 +1019,10 @@ h4 {
     }
     .row {
         padding: 20px 0;
+    }
+    .social {
+        display: flex;
+        flex-direction: row;
     }
 }
 
